Examples/test-suite/errors/cpp_c_specific_keywords.stderr
cpp_c_specific_keywords.i:16: Error: Syntax error in input(3).
